--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "formik": "^2.4.6",
     "framer-motion": "^11.11.1",
     "next": "14.2.14",
+    "next-usequerystate": "^1.20.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2",
+    "react-toastify": "^10.0.5",
     "swr": "^2.2.5",
     "universal-cookie": "^7.2.0",
     "yup": "^1.4.0"
