--- a/package.json
+++ b/package.json
@@ -9,18 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.1.5",
+    "@reduxjs/toolkit": "^2.3.0",
+    "formik": "^2.4.6",
+    "next": "15.0.1",
+    "next-usequerystate": "^1.20.0",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
-    "next": "15.0.1"
+    "react-paginate": "^8.2.0",
+    "react-redux": "^9.1.2",
+    "react-toastify": "^10.0.6",
+    "shamsi-date-converter": "^1.0.5",
+    "swr": "^2.2.5",
+    "universal-cookie": "^7.2.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "15.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.1"
+    "typescript": "^5"
   }
 }
